internal class AnimationString
{
        internal static string isMoving = "isMoving";
        internal static string isRuning = "isRuning";
        internal static string isGrounded = "isGrounded";
        internal static string yVelocity = "yVelocity";
        internal static string jump = "jump";
        internal static string isOnWall = "isOnWall";
        internal static string attack = "attack";
        internal static string rangedAttack = "rangedAttack";
        internal static string canMove = "canMove";
        internal static string hasTarget = "hasTarget";
        internal static string isAlive = "isAlive";
        internal static string hit = "hit";
        internal static string lockVelocity = "lockVelocity";
        internal static string attackCooldown = "attackCooldown";
        internal static string isOpen = "isOpen";
        internal static string isOpenComplete = "isOpenComplete";
}